--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,17 +1,17 @@
 {
     "workbench.colorCustomizations": {
-        "statusBar.foreground": "#FDEEFF",
-        "statusBar.background": "#90329F",
-        "statusBarItem.hoverBackground": "#6F295D",
-        "statusBarItem.remoteForeground": "#FFDAE9",
-        "statusBarItem.remoteBackground": "#A73261",
+        "statusBar.foreground": "#ECEDFF",
+        "statusBar.background": "#4B51B4",
+        "statusBarItem.hoverBackground": "#4C347C",
+        "statusBarItem.remoteForeground": "#FBF2FF",
+        "statusBarItem.remoteBackground": "#8436AA",
         "activityBar.foreground": "#E2B6FF",
         "activityBar.background": "#24003B",
         "activityBar.inactiveForeground": "#4C2EA0",
         "activityBarBadge.foreground": "#370023",
         "activityBarBadge.background": "#FF74CB",
-        "statusBar.debuggingForeground": "#2A0031",
-        "statusBar.debuggingBackground": "#C669D6"
+        "statusBar.debuggingForeground": "#000447",
+        "statusBar.debuggingBackground": "#8188EB"
     },
     "peacock.color": "#050008"
 }
